--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Ryan Yang</title>
-	</head>
-	<body style="background-color:black">
-	<h1 style="font-size:60px; background-color:green">Ryan Yang</h1>
-	<h3 style="font-size:30px; background-color:blue">A little bit about me</h3>
-	<p style="font-family:Arial; background-color:yellow">Hi, everyone reading this page. My name is Ryan
-	Yang, and I am currently a freshman <em>EECS major</em> at UC Berkeley. In my spare time,
-	I love coding and playing Overwatch. Click the picture below to be directed to the
-	UC Berkeley website.</p>
-	<a href="http://berkeley.edu">
-		<img src="https://www2.eecs.berkeley.edu/best/Images/Berkeley-EECS-logo-borders.jpg" />
-	</a>
-	</body>
-</html>
+Hello World
