--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,8 @@
 			<span style="font-size:20px"><strong>Phone Number(Cell):</strong></span> 
 			<span style="font-size:13px">(510)-345-7032 <br />
 			<span style="font-size:20px"><strong>Email Address:</strong></span> 
-			<span style="font-size:13px">angryan@berkeley.edu <br />
+			<a href="mailto:angryan@berkeley.edu">
+				<span style="font-size:13px">angryan@berkeley.edu <br />
+			</a>
 	</body>
 </html>
