--- a/projects.html
+++ b/projects.html
@@ -9,11 +9,11 @@
 		<h1 style="font-size:60px; font-family:'Yatra One';padding-left:25px">Ryan Yang</h1>
 		<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a class="active" href="resume.html">Resume</a></li>
-			<li><a href="projects.html">Projects</a></li>
+			<li><a href="resume.html">Resume</a></li>
+			<li><a class="active" href="projects.html">Projects</a></li>
 			<li><a href="contact.html">Contact</a></li>
 			<li style="float:right"><a href="about.html">About</a></li>
 		</ul>
-		<iframe src="https://docs.google.com/document/d/1q_-dmhe5OVXwLM6rinyNPUGI9DZ30cndJHteABVLawg/pub?embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
+		<embed src="/support/mediaplayer.swf?file=video.mp4" width="325" height="230" allowfullscreen="true" />
 	</body>
 </html>
