--- a/index.html
+++ b/index.html
@@ -71,15 +71,16 @@
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Ryan Yang</h3>
   <img src="Yang_Ryan.png" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
-  <h3>I am currently a freshman majoring in Electrical Engineering and Computer Sciences attending UC Berkeley. In my spare time I love to play video games and code. Some of the projects I've worked on are below. As a side note, this website is still currently in progress</h3>
+  <h3>I am currently a freshman majoring in Electrical Engineering and Computer Sciences attending UC Berkeley. In my spare time I love to play video games and code. Some of the projects I've worked on are below. As a side note, this website is still currently in progress.</h3>
 </div>
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">Social Media/Resume</h3>
-  <p><b>Email:</b><a href="mailto:angryan@berkeley.edu">angryan@berkeley.edu</a></p>
+  <p><b>Email:</b><a href="mailto:angryan@berkeley.edu"> angryan@berkeley.edu</a></p>
   <p><b>Facebook:</b><a href="https://www.facebook.com/kingcheese123"> Ryan Yang</a></p>
   <p><b>LinkedIn:</b><a href="https://www.linkedin.com/in/ryan-yang-3a1932123"> Ryan Yang</a></p>
+  <p><b>Github:</b><a href="https://github.com/angryan"> angryan</a>
   <p><b>Resume:</b><a href="https://drive.google.com/open?id=0Bx0tyhY3s9P-N0VwY3BnZ1EyYms">My Resume</a></p>
 </div>
 
